# advent_of_code_2021

./: MANIFEST.in  README.md  pyproject.toml
src/advent21/: day01.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day2.py  day4.py  day5.py  helpers.py
test/: solutions.json  test_advent.py
